[tool.poetry]
name = "repl_python3_InstaBot"
version = "0.1.0"
description = ""
authors = ["lipe14-ops <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
instabot = "^0.117.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
